--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,9 @@
 [submodule "vendor/symfony/symfony/src/Symfony/Component/Yaml"]
 	path = vendor/symfony/symfony/src/Symfony/Component/Yaml
 	url = https://github.com/symfony/Yaml.git
+[submodule "vendor/symfony/symfony/src/Symfony/Component/Console"]
+	path = vendor/symfony/symfony/src/Symfony/Component/Console
+	url = https://github.com/symfony/Console.git
+[submodule "vendor/symfony/symfony/src/Symfony/Bundle/FrameworkBundle"]
+	path = vendor/symfony/symfony/src/Symfony/Bundle/FrameworkBundle
+	url = https://github.com/symfony/FrameworkBundle.git
