--- a/tests/Fixtures/datas/test.fr.yml
+++ b/tests/Fixtures/datas/test.fr.yml
@@ -10,7 +10,7 @@ title:
 tabs:
     comments: Commentaires
     club_videos: Vidéos du club
-    most_seen_videos: Vidéos les plues vues
+    most_seen_videos: Vidéos les plus vues
     actualite_l1: Actualité de la L1 en vidéo
     more_videos_club: Regarder plus de vidéo de
 video:
